--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <div class="carousel-caption d-none d-md-block">
                         <h5 class="corusel__tittle">PWCH.UZ</h5>
                         <div class="corusel__div">
-                            <p class="corusel__text">Наше внимание на химических веществах</p>
+                            <p class="corusel__text">Our focus on chemicals</p>
                         </div>
                     </div>
                 </div>
@@ -127,7 +127,7 @@
                     <div class="carousel-caption d-none d-md-block">
                         <h5 class="corusel__tittle">PWCH.UZ</h5>
                         <div class="corusel__div">
-                            <p class="corusel__text">Наша страсть в управлении водными ресурсами</p>
+                            <p class="corusel__text">Our Passion in Water Management</p>
                         </div>
                     </div>
                 </div>
@@ -136,7 +136,7 @@
                     <div class="carousel-caption d-none d-md-block">
                         <h5 class="corusel__tittle">PWCH.UZ</h5>
                         <div class="corusel__div">
-                            <p class="corusel__text">Мы поставляем различные виды химических веществ для разных целей
+                            <p class="corusel__text">We supply different types of chemicals for different purposes
                             </p>
                         </div>
                     </div>
@@ -231,7 +231,7 @@
             </div> -->
             <div class="container section1__container">
                 <div class="section1__div01">
-                    <p class="section1__text01">Наши товары</p>
+                    <p class="section1__text01">Our products</p>
                 </div>
                 <div class="row section1__row">
                     <div class="col-xl-4  section1__card01">
@@ -244,7 +244,7 @@
                                 <h5 class="card-title">BETZ CP1654 (Hyfloc CP654)</h5>
                                 <p class="card-text"></p>
                                 <!--   <a href="#!" class="btn btn-primary">Просмотреть прадукту</a> -->
-                                <button class="custom-btn view__item btn-15">Просмотреть прадукту</button>
+                                <button class="custom-btn view__item btn-15">View product</button>
                             </div>
                         </div>
                     </div>
@@ -258,7 +258,7 @@
                                 <h5 class="card-title">BETZ MPH5000 (MemKare KL 500)</h5>
                                 <p class="card-text"></p>
                                 <!--   <a href="#!" class="btn btn-primary">Просмотреть прадукту</a> -->
-                                <button class="custom-btn view__item btn-15">Просмотреть прадукту</button>
+                                <button class="custom-btn view__item btn-15">View product</button>
                             </div>
                         </div>
                     </div>
@@ -272,7 +272,7 @@
                                 <h5 class="card-title">BETZDEARBON DCL30 (MemKare DX 30)</h5>
                                 <p class="card-text"></p>
                                 <!--    <a href="#!" class="btn btn-primary">Просмотреть прадукту</a> -->
-                                <button class="custom-btn view__item btn-15">Просмотреть прадукту</button>
+                                <button class="custom-btn view__item btn-15">View product</button>
                             </div>
                         </div>
                     </div>
@@ -286,7 +286,7 @@
                                 <h5 class="card-title">BETZDEARBON DCL30 (MemKare DX 30)</h5>
                                 <p class="card-text"></p>
                                 <!-- <a href="#!" class="btn btn-primary">Просмотреть прадукту</a> -->
-                                <button class="custom-btn view__item btn-15">Просмотреть прадукту</button>
+                                <button class="custom-btn view__item btn-15">View product</button>
                             </div>
                         </div>
                     </div>
@@ -300,7 +300,7 @@
                                 <h5 class="card-title">BETZDEARBON DCL30 (MemKare DX 30)</h5>
                                 <p class="card-text"></p>
                                 <!-- <a href="#!" class="btn btn-primary">Просмотреть прадукту</a> -->
-                                <button class="custom-btn view__item btn-15">Просмотреть прадукту</button>
+                                <button class="custom-btn view__item btn-15">View product</button>
                             </div>
                         </div>
                     </div>
@@ -315,14 +315,14 @@
                                 <h5 class="card-title">BETZDEARBON DCL30 (MemKare DX 30)</h5>
                                 <p class="card-text"></p>
                                 <!--    <a href="#!" class="btn btn-primary">Просмотреть прадукту</a> -->
-                                <button class="custom-btn view__item btn-15">Просмотреть прадукту</button>
+                                <button class="custom-btn view__item btn-15">View product</button>
                             </div>
                         </div>
                     </div>
 
                 </div>
                 <div class="section1__div02">
-                    <button class="custom-btn1 section1__btn01 btn-13">Показать все продукты </button>
+                    <button class="custom-btn1 section1__btn01 btn-13">Show all products </button>
                 </div>
             </div>
         </div>
@@ -330,12 +330,12 @@
             <div class="container">
                 <div class="row section2__row">
                     <div class="col-xl-6 col-lg-6 section2__column fade-right">
-                        <p class="section2__text01">Что мы делаем?</p>
-                        <p class="section2__text">PWC обеспечивает производство химических веществ и их торговлю для
-                            определённого использования. Производимые химикаты могут использоваться в промышленности для
-                            очистки вод, обработки градирен, обработки процесса сброса нулевой жидкости (ZLD) и т. д.
-                            Кроме того, наша компания сфокусирована на основных рынках Центральной Азии и играет важную
-                            роль в распространении своих товаров по всему Узбекистану и в соседние страны.</p>
+                        <p class="section2__text01">What are we doing?</p>
+                        <p class="section2__text">PWC ensures the production of chemicals and their trade for
+                             certain use. Produced chemicals can be used in industry for
+                             water treatment, cooling tower treatment, zero liquid discharge (ZLD) process treatment, etc.
+                             In addition, our company is focused on the main markets of Central Asia and plays an important
+                             role in distributing their goods throughout Uzbekistan and neighboring countries.</p>
                     </div>
                     <div class="col-xl-6 col-lg-6 section2__column1 fade-left">
                         <img class="column__image" width="100%"
@@ -358,26 +358,26 @@
                     <div class="col-xl-6 section3__column01">
                         <form action="" class="section3__form">
                             <div class="section3__div">
-                                <p class="section3__text01">КОНТАКТЫ</p>
+                                <p class="section3__text01">CONTACTS</p>
                             </div>
                             <div class="row" id="app">
                                 <div class="col-xl-6 section3__column">
-                                    <input required type="text" class="form-control section3__inp1" placeholder="Имя"
+                                    <input required type="text" class="form-control section3__inp1" placeholder="Name"
                                         name="" id="">
-                                    <input required type="number" class="form-control" placeholder="Номер телефона"
+                                    <input required type="number" class="form-control" placeholder="Phone number"
                                         name="" id="">
-                                    <input required type="text" class="form-control" placeholder="Ваш email" name=""
+                                    <input required type="text" class="form-control" placeholder="Your email" name=""
                                         id="">
                                 </div>
                                 <div class="col-xl-6">
-                                    <textarea required name="" placeholder="Сообщение" id=""
+                                    <textarea required name="" placeholder="Message" id=""
                                         class="section3__textarea form-control" cols="30" rows="7"></textarea>
                                 </div>
                             </div>
                             <div class="section3__div01  ">
                                 <!--    <a type="submit" class="section3__link" href="#!"></a>  -->
                                 <!--  <button class="section3__link" type="submit">Отправить</button> -->
-                                <button class="custom-btn btn-11 section3__link">Отправить<div class="dot"></div>
+                                <button class="custom-btn btn-11 section3__link">Send<div class="dot"></div>
                                 </button>
 
                             </div>
@@ -473,22 +473,22 @@
                                 sizes="(max-width: 233px) 100vw, 233px"></a></div>
                     <div class="footer-left-widget">
                         <div class="textwidget">
-                            <p class="footer__text footer__text02">Головной офис находится в Узбекистане, г. Чирчик. PWC
-                                основана в 2017 году и имеет
-                                значительное присутствие в Центральной Азии.</p>
+                            <p class="footer__text footer__text02">The head office is located in Uzbekistan, Chirchik. PWC
+                                 founded in 2017 and has
+                                 significant presence in Central Asia.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-5 col-md-6 footer-widget footer__div01">
                     <div class="footer-widget footer-center-widget">
-                        <h3 class="widget-title">Адрес</h3>
+                        <h3 class="widget-title">Address</h3>
                         <div class="textwidget">
-                            <p class="footer__text">Адрес: Ташкентская область,<br>
-                                город Чирчик, улица В. Кадырова, д. 10. 111727</p>
+                            <p class="footer__text">Address: Tashkent region,<br>
+                              city Chirchik, street V. Kadyrova, d. 10. 111727</p>
                         </div>
                     </div>
                     <div class="footer-widget footer-center-widget">
-                        <h3 class="widget-title">Телефон</h3>
+                        <h3 class="widget-title">Telephone</h3>
                         <div class="textwidget">
                             <p class="footer__text">+998 71 209 10 40<br>
                                 +998 97 267 33 00</p>
@@ -527,8 +527,8 @@
             <div class="row">
                 <div class="col-lg-6 col-md-6 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="300ms">
                     <div class="copyright-text">
-                        © 2021 Разработка сайта <a class="footer__link" href="https://eson.uz/">Eson.uz</a>. Все права
-                        защищены. </div>
+                     © 2021 Website development <a class="footer__link" href="https://eson.uz/"> Eson.uz</a>.All rights
+                         reserved.</div>
                 </div>
             </div>
         </div>
