--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             </li>
                             <div class="menu-item  ">
                                 <div class="menu-text ">
-                                    <a href="https://pwch.uz/ru/o-nas/" class="dropdown-toggle">About Us</a>
+                                    <a href="https://mironshoh08.github.io/o-nas-rus/" class="dropdown-toggle">About Us</a>
                                 </div>
                                 <div class="sub-menu">
                                     <div class="icon-box">
